--- a/Uke34/index.html
+++ b/Uke34/index.html
@@ -8,12 +8,13 @@
 
 
 
-
-
-
 <body>
     <h1> min hjemmeside </h1>
-    <p>Hallo verden!</p>
+      <p>Hallo verden!</p>
+      <p>Jeg heter Eva</p>
+
+
+
 
 
 
