lagt til fare og ny størrelse

--- a/Uke34/sommerferien.html
+++ b/Uke34/sommerferien.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html>
   <head>
-  <style>
-    <title>sommerferie 2018</title>
+  <font face=arial color=pink size=12>  <title>sommerferie 2018</title>
     <meta charset="utf-8">
   </head>
 
   <body>
     <h1>Sommerferien 2018</h1>
     <p>I sommer har jeg vært i Norge å jobbet mye. det var veldig fint vær så da
-      jeg ikke jobbet var jeg ute på stranden eller i båten min</p><fonnt 
+      jeg ikke jobbet var jeg ute på stranden eller i båten min</p><fonnt
   </body>
   </html>
