lagt inn i bilde og markert tekst

--- a/Uke34/index.html
+++ b/Uke34/index.html
@@ -9,7 +9,8 @@
 
 
 <body>
-    <h1> min hjemmeside </h1>
+  <font face=vardana color=pink size=12> <h1> min hjemmeside </h1>
+
       <p>Hallo verden!</p>
       <p>Jeg heter Eva</p>
 
