--- a/Uke34/sommerferien.html
+++ b/Uke34/sommerferien.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html>
   <head>
-  <font face=arial color=pink size=12>  <title>sommerferie 2018</title>
+  <font face=arial color=pink size=5>  <title>sommerferie 2018</title>
     <meta charset="utf-8">
   </head>
 
   <body>
-    <h1>Sommerferien 2018</h1>
-    <p>I sommer har jeg vært i Norge å jobbet mye. det var veldig fint vær så da
-      jeg ikke jobbet var jeg ute på stranden eller i båten min</p><fonnt
+    <h1><b>Sommerferien 2018<b/><h1>
+    <p>
+        <mark>  I sommer </mark> har jeg vært i Norge å jobbet mye. det var veldig fint vær så da
+      jeg ikke jobbet var jeg ute på stranden eller i båten min
+    </p>
+    <img src=https://www.pexels.com/photo/adorable-animal-breed-canine-356378/.jpg
+    
+
   </body>
   </html>
