rediger bildet igjen

--- a/Uke34/sommerferien.html
+++ b/Uke34/sommerferien.html
@@ -11,8 +11,8 @@
         <mark>  I sommer </mark> har jeg vært i Norge å jobbet mye. det var veldig fint vær så da
       jeg ikke jobbet var jeg ute på stranden eller i båten min
     </p>
-    <img src=https://www.pexels.com/photo/adorable-animal-breed-canine-356378/.jpg
-    
+    <img src="https://www.pexels.com/photo/adorable-animal-breed-canine-356378/.jpg">
+
 
   </body>
   </html>
