Lagt til ny underoverskrift

--- a/Uke34/sommerferien.html
+++ b/Uke34/sommerferien.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html>
   <head>
-  <font face=arial color=pink size=5>  <title>sommerferie 2018</title>
+  <title>sommerferie 2018</title>
     <meta charset="utf-8">
   </head>
 
   <body>
     <h1><b>Sommerferien 2018<b/><h1>
+    <h2><b>hjemme i Norge</b></h2>
     <p>
-        <mark>  I sommer </mark> har jeg vært i Norge å jobbet mye. det var veldig fint vær så da
-      jeg ikke jobbet var jeg ute på stranden eller i båten min
+        <mark>  I sommer </mark> har jeg vært i Norge å jobbet mye. Det var veldig fint vær så da
+      jeg ikke jobbet var jeg ute på stranden eller i båten min.
     </p>
-    <img src="https://www.pexels.com/photo/adorable-animal-breed-canine-356378/.jpg">
+    <img src="https://images.pexels.com/photos/356378/pexels-photo-356378.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260">
 
 
   </body>
