lagt til nyt blide

--- a/Uke34/sommerferien.html
+++ b/Uke34/sommerferien.html
@@ -6,14 +6,12 @@
   </head>
 
   <body>
-    <h1><b>Sommerferien 2018<b/><h1>
+    <h1><b>Sommerferien 2018</b><h1>
     <h2><b>hjemme i Norge</b></h2>
     <p>
         <mark>  I sommer </mark> har jeg vært i Norge å jobbet mye. Det var veldig fint vær så da
       jeg ikke jobbet var jeg ute på stranden eller i båten min.
     </p>
-    <img src="https://images.pexels.com/photos/356378/pexels-photo-356378.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260">
-
-
+    <img src="https://images.pexels.com/photos/878/sea-sky-beach-holiday.jpg?auto=compress&cs=tinysrgb&h=750&w=1260">
   </body>
-  </html>
+</html>
