--- a/Uke34/sommerferien.html
+++ b/Uke34/sommerferien.html
@@ -6,8 +6,8 @@
   </head>
 
   <body>
-    <h1><b>Sommerferien 2018</b><h1>
-    <h2><b>hjemme i Norge</b></h2>
+    <h1>Sommerferien 2018<h1>
+    <h2>hjemme i Norge</h2>
     <p>
         <mark>  I sommer </mark> har jeg vært i Norge å jobbet mye. Det var veldig fint vær så da
       jeg ikke jobbet var jeg ute på stranden eller i båten min.
