Små fiks + background-image.

--- a/Uke34/sommerferien.html
+++ b/Uke34/sommerferien.html
@@ -5,13 +5,29 @@
     <meta charset="utf-8">
   </head>
 
+  <style type="text/css">
+    body {
+      background: url(http://www.designtickle.com/cdnmedia/-/2012/11/colorful-patterns-repeating-tiles/08-pink-airline-repeating-background-pattern.png);
+      background-repeat: repeat;
+    }
+
+    #info-sommer {
+      width: 50%;
+    }
+
+    #palme-tre {
+      margin: auto;
+      width: 50%;
+    }
+  </style>
+
   <body>
     <h1>Sommerferien 2018<h1>
-    <h2>hjemme i Norge</h2>
-    <p>
-        <mark>  I sommer </mark> har jeg vært i Norge å jobbet mye. Det var veldig fint vær så da
+    <h2>Hjemme i Norge</h2>
+    <p id="info-sommer">
+        <mark>I sommer</mark> har jeg vært i Norge å jobbet mye. Det var veldig fint vær så da
       jeg ikke jobbet var jeg ute på stranden eller i båten min.
     </p>
-    <img src="https://images.pexels.com/photos/878/sea-sky-beach-holiday.jpg?auto=compress&cs=tinysrgb&h=750&w=1260">
+    <img id="palme-tre" src="https://images.pexels.com/photos/878/sea-sky-beach-holiday.jpg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Bilde av palme">
   </body>
 </html>
