Forklaringer lagt til.

--- a/Uke34/sommerferien.html
+++ b/Uke34/sommerferien.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!doctype html> <!-- Vi sier til nettleseren at dette er et html dokument -->
 <html>
-  <head>
+  <head> <!-- formaliteter, vi forteller hvilken tittel, hvilke frameworks osv. -->
   <title>sommerferie 2018</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8"> <!-- utf-8 bokstaver -->
   </head>
 
   <style type="text/css">
@@ -21,7 +21,7 @@
     }
   </style>
 
-  <body>
+  <body> <!-- selve siden -->
     <h1>Sommerferien 2018<h1>
     <h2>Hjemme i Norge</h2>
     <p id="info-sommer">
@@ -29,5 +29,5 @@
       jeg ikke jobbet var jeg ute på stranden eller i båten min.
     </p>
     <img id="palme-tre" src="https://images.pexels.com/photos/878/sea-sky-beach-holiday.jpg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Bilde av palme">
-  </body>
-</html>
+  </body> <!-- avslutt siden -->
+</html> <!-- html er ferdig -->
