lagt til bilde av katt

--- a/Uke35/Uke35.html
+++ b/Uke35/Uke35.html
@@ -29,5 +29,10 @@
           <li>fugl</li>
       </ul>
 
+ <!--legger til bilde i nettsiden:-->
+ <!-- jeg lagerer bilde på mappen og skriver inn bildenavnet-->
+      <img src="katt.jpg" width="360px" title="katt med blå øyne">
+
+
   </body>
 </html>
