fikset på ol, hadde skrevet il i steden for li.

--- a/Uke35/ferie.html
+++ b/Uke35/ferie.html
@@ -14,9 +14,9 @@
 
           <h3>Hva jeg liker med spania:</h3>
           <ol>
-            <il> Det er varmt</il>
-            <il>Masse strender</il>
-            <il>Det er masse god mat</il>
+            <li> Det er varmt</li>
+            <li>Masse strender</li>
+            <li>Det er masse god mat</li>
           </ol>
 
         <p>
