setter inn link, bilde og lydfil.

--- a/Uke35/Uke35.html
+++ b/Uke35/Uke35.html
@@ -27,12 +27,22 @@
           <li>hund</li>
           <li>katt</li>
           <li>fugl</li>
-      </ul>
+      </ul> 
+      <p>
+<!-- setter inn en link til VG.no-->
+          <a href="http://www.vg.no" target="_blank"> VG </a>
+      </p>
 
  <!--legger til bilde i nettsiden:-->
  <!-- jeg lagerer bilde på mappen og skriver inn bildenavnet-->
-      <img src="katt.jpg" width="360px" title="katt med blå øyne">
-
+      <img src="bilder/katt.jpg"
+      width="360px"
+      title="katt med blå øyne">
+<!-- jeg skal sette inn en lydfil-->
+      <audio src="sanger/grind.mp3"
+      autoplay controls></audio>
+<!-- jeg skal sette inn en film-->
+      <video src=""
 
   </body>
 </html>
