la til en film.

--- a/Uke35/Uke35.html
+++ b/Uke35/Uke35.html
@@ -27,7 +27,7 @@
           <li>hund</li>
           <li>katt</li>
           <li>fugl</li>
-      </ul> 
+      </ul>
       <p>
 <!-- setter inn en link til VG.no-->
           <a href="http://www.vg.no" target="_blank"> VG </a>
@@ -38,11 +38,19 @@
       <img src="bilder/katt.jpg"
       width="360px"
       title="katt med blå øyne">
+
 <!-- jeg skal sette inn en lydfil-->
+    <p>
       <audio src="sanger/grind.mp3"
       autoplay controls></audio>
+    </p>
+
 <!-- jeg skal sette inn en film-->
-      <video src=""
+    <p>
+      <video src="film/katt_som_sover.mp4"
+      autoplay controls
+      width="500"></video>@
+    </p>
 
   </body>
 </html>
