la til en ny link

--- a/Uke36/skjelma og tabeller/index.html
+++ b/Uke36/skjelma og tabeller/index.html
@@ -8,6 +8,8 @@
     <h1>Uke 36</h1>
 
     <a href="skjema_og_tabeller.html">tabeller og skjemaer</a>
+    <br>
+    <a href="skjema.html">Skjema</a>
 
 
   </body>
