la til komentarer

--- a/Uke36/skjelma og tabeller/skjema_og_tabeller.html
+++ b/Uke36/skjelma og tabeller/skjema_og_tabeller.html
@@ -5,10 +5,12 @@
     <title>tabeller og skjema</title>
   </head>
   <body>
+    <a href="index.html">hjem</a>
     <title>tabeller og skjemaer</title>
 
 
-    <table> <!--oppretter et table-element som tabellen skal stå i-->
+    <table style="text-align:left;"> <!--oppretter et table-element som tabellen skal stå i-->
+                                    <!-- legger inn et style-elemnet og forandrer hvor teksten skla stå på siden-->
       <thead><!--overskriftene legges i et thead-element-->
         <tr><!--en ny rad lages med et tr-elemnt, tr står for "take a road"-->
           <th>Album</th><!--selve overskriftnen legges i et th-element-->
@@ -22,7 +24,7 @@
     <tbody><!-- i tbody legges innholde i tabellen-->
       <tr>
         <td>Malibu</td><!--innholdet i en kollone lages med et td-element-->
-        <td>Anderson.paak</td>
+        <td>Anderson.paak</td><!--td står for "table data"-->
         <td>2016</td>
       </tr>
     </tbody>
