fikset link på hjemsiden

--- a/Uke36/skjelma og tabeller/index.html
+++ b/Uke36/skjelma og tabeller/index.html
@@ -10,6 +10,8 @@
     <a href="skjema_og_tabeller.html">tabeller og skjemaer</a>
     <br>
     <a href="skjema.html">Skjema</a>
+    <br>
+    <a href="kjema_prøv_selv.html">skjema prøv selv</a>
 
 
   </body>
