h1 med blå bakgrunn og gul skrift

--- a/Uke36/CSS/index.html
+++ b/Uke36/CSS/index.html
@@ -8,5 +8,7 @@
     <h1>CSS</h1>
      <p style="background-color:blue; font-size:20px; padding:20px">hei jeg heter Eva og jer er 18 år</p>
 
+<!-- h1 overskrift med gulskrift og blå bakgrunn-->
+    <h1 style="background-color:blue; color:yellow;">sverige</h1>
   </body>
 </html>
