h2 med brun bakgrunn og hvit skrift

--- a/Uke36/CSS/index.html
+++ b/Uke36/CSS/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body style="background-color:pink; font-family: helvetica, times, arial, sans">
+  <body style="font-family: helvetica, times, arial, sans">
     <h1>CSS</h1>
      <p style="background-color:blue; font-size:20px; padding:20px">hei jeg heter Eva og jer er 18 år</p>
 
 <!-- h1 overskrift med gulskrift og blå bakgrunn-->
-    <h1 style="background-color:blue; color:yellow;">sverige</h1>
+    <h1 style="background-color:blue; color:yellow;">Gul</h1>
+    <br>
+<!-- h2 med hvit skrift og brun bakgrunn-->
+    <h2 style="background-color:brown; color:white;">Hvit</h2>
+    <br>
+<!-- h3 med
+
   </body>
 </html>
