h3 med svart skrift og rosa bakgrunn

--- a/Uke36/CSS/index.html
+++ b/Uke36/CSS/index.html
@@ -14,7 +14,8 @@
 <!-- h2 med hvit skrift og brun bakgrunn-->
     <h2 style="background-color:brown; color:white;">Hvit</h2>
     <br>
-<!-- h3 med
+<!-- h3 med sort srkift og rosa bakgrunn-->
+    <h3 style="background-color:pink; color:black;">Svart</h3>
 
   </body>
 </html>
