avsnitt med hvit skrift og orange bakgrunn

--- a/Uke36/CSS/index.html
+++ b/Uke36/CSS/index.html
@@ -17,5 +17,14 @@
 <!-- h3 med sort srkift og rosa bakgrunn-->
     <h3 style="background-color:pink; color:black;">Svart</h3>
 
+<!--avsnitt med hvit skrift og orange bakgrunn-->
+
+
+    <p style="background-color:orange; color:white; padding:30px;">
+      Hei jeg hater Eva og jeg er 18 år
+    </p>
+
+  
+
   </body>
 </html>
