--- a/Uke36/CSS/index.html
+++ b/Uke36/CSS/index.html
@@ -18,13 +18,13 @@
     <h3 style="background-color:pink; color:black;">Svart</h3>
 
 <!--avsnitt med hvit skrift og orange bakgrunn-->
-
-
-    <p style="background-color:orange; color:white; padding:30px;">
+    <p style="background-color:orange; color:white; margin:30px;">
       Hei jeg hater Eva og jeg er 18 år
     </p>
 
-  
+
+
+
 
   </body>
 </html>
