--- a/Uke36/skjelma_og_tabeller/index.html
+++ b/Uke36/skjelma_og_tabeller/index.html
@@ -11,7 +11,7 @@
     <br>
     <a href="skjema.html">Skjema</a>
     <br>
-    <a href="kjema_prøv_selv.html">skjema prøv selv</a>
+    <a href="skjema_prøv_selv.html">skjema prøv selv</a>
 
 
   </body>
