--- a/Uke 44/nettavis/index.html
+++ b/Uke 44/nettavis/index.html
@@ -31,7 +31,7 @@
         <img src="bilder/stjernehimmel.jpg" alt="bilde av stjernehimmel">
       </section>
       <section class="litensak">
-        litensak2
+        litensak2 test
       </section>
       <section class="litensak">
         litensak3
