--- a/ReddMaten/index.html
+++ b/ReddMaten/index.html
@@ -3,13 +3,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stilark_index.css">
+    <link rel="stylesheet" type="text/css" href="css/stilark_index.css">
     <title>hjem-ReddMaten</title>
   </head>
   <body>
     <header>
       <section id="logo container">
-      
+
       </section>
       <section class="usynlig container">
 
