--- a/ReddMaten/index.html
+++ b/ReddMaten/index.html
@@ -3,38 +3,45 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/stilark_index.css">
+    <link rel="stylesheet" href="css/stilark_index.css">
     <title>hjem-ReddMaten</title>
   </head>
   <body>
+    <!--HEADER STARTER-->
     <header>
-      <section id="logo container">
-
+      <section id="logo">
+        <h1>Redd Maten</h1>
       </section>
-      <section class="usynlig container">
-
+      <section class="usynlig">
       </section>
-      <section class="lenke container">
-        <a href="index.html">Hejm</a>
+      <section class="lenke">
+        <a href="index.html">Hjem</a>
       </section>
-      <section class="lenke container">
+      <section class="lenke">
         <a href="oppskrifter.html">Oppskrifter</a>
       </section>
-      <section class="lenke container">
+      <section class="lenke">
         <a href="statestikk.html">Statestikk</a>
       </section>
-      <section class="lenke container">
-        <a href="kontakt/kontakt.html">Kontakt oss</a>
+      <section class="lenke">
+        <a href="kontakt.html">Kontakt oss</a>
       </section>
     </header>
+    <!--HEADER SLUTTER-->
+    <!--MAIN STARER hovedinnhold på nettsiden-->
     <main>
-      <section>
+      <div class="flex-container">
+        <div class="slagord">
+          Redd maten
+          <p>matsvinn er ditt vinn</p>
+      </div>
+      <div class="sok">
+        søk
+      </div>
 
-        <div class="overskrift-h1">
-          <h1>Redd maten</h1>
-        </div>
-      </section>
+      </div>
     </main>
+    <!--MAIN SLUTTER-->
     <footer></footer>
   </body>
 </html>
