--- a/ReddMaten/index.html
+++ b/ReddMaten/index.html
@@ -30,11 +30,11 @@
     <!--HEADER SLUTTER-->
     <!--MAIN STARER hovedinnhold på nettsiden-->
     <main>
-      <div class="flex-container">
+      <div1 class="flex-container">
         <div class="slagord">
-          Redd maten
+          <h1>Redd maten</h1>
           <p>matsvinn er ditt vinn</p>
-      </div>
+      </div2>
       <div class="sok">
         søk
       </div>
