laget ny index med bakgrunnsbilde og linker

--- a/ReddMaten/index.html
+++ b/ReddMaten/index.html
@@ -1,47 +1,27 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/stilark_index.css">
-    <title>hjem-ReddMaten</title>
+    <link rel="stylesheet" href="css/stilark_hjemmeside.css" type="text/css">
+    <title>test redd maten</title>
   </head>
   <body>
-    <!--HEADER STARTER-->
     <header>
-      <section id="logo">
-        <h1>Redd Maten</h1>
-      </section>
-      <section class="usynlig">
-      </section>
-      <section class="lenke">
-        <a href="index.html">Hjem</a>
-      </section>
-      <section class="lenke">
-        <a href="oppskrifter.html">Oppskrifter</a>
-      </section>
-      <section class="lenke">
-        <a href="statestikk.html">Statestikk</a>
-      </section>
-      <section class="lenke">
-        <a href="kontakt.html">Kontakt oss</a>
-      </section>
+      <div class="row">
+        <div class="logo">
+          <h2>REDD MATEN</h2>
+        </div>
+        <ul class="main-nav">
+          <li class="active"><a href="index.html">hjem</a></li>
+          <li><a href="oppskrifter.html">Oppskrifter</a></li>
+          <li><a href="statestikk.html">Informasjon</a></li>
+          <li><a href="kontakt.html">Kontakt oss</a></li>
+        </ul>
+      </div>
+      <div class="hero">
+        <h1>REDD MATEN</h1>
+        <p>MATSVINN ER DITT VINN</p>
+      </div>
     </header>
-    <!--HEADER SLUTTER-->
-    <!--MAIN STARER hovedinnhold på nettsiden-->
-    <main>
-      <div1 class="flex-container">
-        <div class="slagord">
-          <h1>Redd maten</h1>
-          <p>matsvinn er ditt vinn</p>
-      </div2>
-      <div class="sok">
-        søk
-      </div>
-
-      </div>
-    </main>
-    <!--MAIN SLUTTER-->
-    <footer></footer>
   </body>
 </html>
