--- a/ReddMaten/kontakt.html
+++ b/ReddMaten/kontakt.html
@@ -13,10 +13,10 @@
           <h2>REDD MATEN</h2>
         </div>
         <ul class="main-nav">
-          <li class="active"><a href="index.html">hjem</a></li>
+          <li><a href="index.html">hjem</a></li>
           <li><a href="oppskrifter.html">Oppskrifter</a></li>
           <li><a href="statestikk.html">Informasjon</a></li>
-          <li><a href="kontakt.html">Kontakt oss</a></li>
+          <li class="active"><a href="kontakt.html">Kontakt oss</a></li>
         </ul>
       </div>
     </header>
