lagt til søkefelt på hjemmesiden

--- a/ReddMaten/index.html
+++ b/ReddMaten/index.html
@@ -21,6 +21,14 @@
       <div class="hero">
         <h1>REDD MATEN</h1>
         <p>MATSVINN ER DITT VINN</p>
+        <div class="box">
+          <h3>søk</h3>
+          <form class="sok">
+            <input class="sokeflet "type="text" name="" placeholder="Skriv her...">
+            <input type="submit" name="" value="seach">
+          </form>
+
+        </div>
       </div>
     </header>
   </body>
