--- a/ReddMaten/info.html
+++ b/ReddMaten/info.html
@@ -2,9 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/kontakt_stilark.css">
-    <title>kontakt oss</title>
-
+    <link rel="stylesheet" href="css/info_stilark.css">
+    <title>Oppskrifter</title>
   </head>
   <body>
     <header>
@@ -15,8 +14,8 @@
         <ul class="main-nav">
           <li><a href="index.html">hjem</a></li>
           <li><a href="oppskrifter.html">Oppskrifter</a></li>
-          <li><a href="info.html">Informasjon</a></li>
-          <li class="active"><a href="kontakt.html">Kontakt oss</a></li>
+          <li class="active"><a href="info.html">Informasjon</a></li>
+          <li><a href="kontakt.html">Kontakt oss</a></li>
         </ul>
       </div>
     </header>
