--- a/ReddMaten/index.html
+++ b/ReddMaten/index.html
@@ -14,7 +14,7 @@
         <ul class="main-nav">
           <li class="active"><a href="index.html">hjem</a></li>
           <li><a href="oppskrifter.html">Oppskrifter</a></li>
-          <li><a href="statestikk.html">Informasjon</a></li>
+          <li><a href="info.html">Informasjon</a></li>
           <li><a href="kontakt.html">Kontakt oss</a></li>
         </ul>
       </div>
